# IPD-converter

./: .gitignore  README.md  environment.yml  main.nf  nextflow.config  pyproject.toml  requirements.txt
